# rcpilot

./: .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README-design-d.md  README.md  ROADMAP.md  deploy.fish  pyproject.toml  rcpilot.service  release.fish  restart.fish
.claude/: settings.local.json
docs/logo/: spec.html
pilot/: __init__.py  config.py  db.py  main.py  models.py  projects.py  proxy.py  self_updater.py  sessions.py  ticker.py  updater.py  watchdog.py
pilot/static/: index.html  manifest.webmanifest  sw.js
pilot/static/css/: theme-patch.css
pilot/static/js/: design-d.js
tests/: test_config.py  test_db.py  test_import.py  test_main.py  test_projects.py  test_watchdog.py
