[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-pilot"
version = "0.3.0"
description = "Lightweight self-hosted session manager for Claude Code Remote Control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "remote-control", "session-manager", "raspberry-pi"]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "tomli>=2.0; python_version < '3.11'",  # stdlib tomllib available in 3.11+
    "aiosqlite>=0.20",  # Phase 1 persistence — schema defined now, logic later
    "loguru>=0.7",
]

[project.scripts]
# `uvx claude-pilot` or `uv tool install claude-pilot` → runs this entry point
pilot = "pilot.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # for FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
