[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcpilot"
version = "1.0.4"
description = "Lightweight self-hosted session manager for Claude Code Remote Control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "remote-control", "session-manager", "raspberry-pi"]
authors = [
    { name = "kjozsa", email = "kjozsa@users.noreply.github.com" }
]
maintainers = [
    { name = "kjozsa", email = "kjozsa@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "tomli>=2.0; python_version < '3.11'",  # stdlib tomllib available in 3.11+
    "aiosqlite>=0.20",  # Phase 1 persistence — schema defined now, logic later
    "loguru>=0.7",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/kjozsa/rcpilot"
Repository = "https://github.com/kjozsa/rcpilot"
Issues = "https://github.com/kjozsa/rcpilot/issues"
Documentation = "https://github.com/kjozsa/rcpilot#readme"

[project.scripts]
# `uvx rcpilot` or `uv tool install rcpilot` → runs this entry point
rcpilot = "pilot.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # for FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["pilot"]

[tool.hatch.build.targets.sdist]
include = [
    "/pilot",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
